# backend/openapi.json
@@ -5150,7 +5150,9 @@
           "createdAt",
           "lastUsedAt",
           "revokedAt",
-          "expiresAt"
+          "expiresAt",
+          "interactionCount",
+          "reportCount"
         ],
         "properties": {
           "createdAt": {
@@ -5172,6 +5174,10 @@
             "type": "string",
             "format": "uuid"
           },
+          "interactionCount": {
+            "type": "integer",
+            "format": "int64"
+          },
           "kind": {
             "type": "string"
           },
@@ -5187,6 +5193,10 @@
           },
           "prefix": {
             "type": "string"
+          },
+          "reportCount": {
+            "type": "integer",
+            "format": "int64"
           },
           "revokedAt": {
             "type": [
